--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -12,7 +12,7 @@ html,body{
     height:100%
 }
 body {
-
+    background-color: #fff !important;
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
