图片商品完成

--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -64,6 +64,7 @@ select, option{
     -webkit-user-select: none;
     user-select: none;
 }
+* { touch-action: none; }
 .clear {
     clear: both;
 }
